[tool.poetry]
name = "reinfolib-app"
version = "0.1.0"
description = ""
authors = ["DSE <ds.estate.fukuoka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.0.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
